--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,12 +27,13 @@ dependencies {
     def lifecycle_version = "1.1.1"
     def retrofit_version = "2.4.0"
     def support_version = "28.0.0-rc01"
-    def glide_version = "4.7.1"
+    def fresco_version = "1.10.0"
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
-    implementation "com.github.bumptech.glide:glide:$glide_version"
-    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
+    implementation "com.facebook.fresco:fresco:$fresco_version"
+    implementation "com.facebook.fresco:animated-webp:$fresco_version"
+    implementation "com.facebook.fresco:webpsupport:$fresco_version"
     implementation "com.android.support:appcompat-v7:$support_version"
     implementation "com.android.support:recyclerview-v7:$support_version"
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
