--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,41 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="name.malkov.joomtest.ui.MainActivity"
+        <activity
+            android:name="name.malkov.joomtest.ui.MainActivity"
+            android:launchMode="singleTask"
             android:screenOrientation="portrait">
+            <intent-filter android:label="@string/action_label_http_giphy">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="giphy.com"
+                    android:pathPrefix="/gifs"
+                    android:scheme="http" />
+            </intent-filter>
+            <intent-filter android:label="@string/action_label_http_giphy">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="giphy.com"
+                    android:pathPrefix="/gifs"
+                    android:scheme="https" />
+            </intent-filter>
+            <intent-filter android:label="@string/action_label_scheme_giphy">
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="gifs"
+                    android:scheme="giphy" />
+            </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
