--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name="name.malkov.joomtest.ui.JoomTestApplication"
+        android:name="name.malkov.joomtest.JoomTestApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -13,7 +13,17 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="name.malkov.joomtest.ui.MainActivity"
+            android:name="name.malkov.joomtest.ui.imagelist.ImageListActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="name.malkov.joomtest.ui.preview.PreviewActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
             <intent-filter android:label="@string/action_label_http_giphy">
@@ -40,17 +50,13 @@
             </intent-filter>
             <intent-filter android:label="@string/action_label_scheme_giphy">
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
                     android:host="gifs"
                     android:scheme="giphy" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
