--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,6 @@
         android:theme="@style/AppTheme">
         <activity
             android:name="name.malkov.joomtest.ui.imagelist.ImageListActivity"
-            android:launchMode="singleTask"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,7 +23,7 @@
         </activity>
         <activity
             android:name="name.malkov.joomtest.ui.preview.PreviewActivity"
-            android:launchMode="singleTask"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait">
             <intent-filter android:label="@string/action_label_http_giphy">
                 <action android:name="android.intent.action.VIEW" />
